# ai-financial-analysis-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
ai_financial_analyst/: __init__.py
ai_financial_analyst/agents/: __init__.py  comparison_agent.py  conversational_agent.py  editor.py  intent_classifier.py  manager.py  orchestrator.py  quant_analyst.py  refinement_handler.py  researcher.py
ai_financial_analyst/charts/: __init__.py  _data.py  _theme.py  combined.py  comparison.py  dispatcher.py  fundamentals.py  pipeline.py  price_action.py  risk.py  technical.py  volume.py
ai_financial_analyst/config/: __init__.py  settings.py
ai_financial_analyst/core/: __init__.py  artifacts.py  budget_tracker.py  cache.py  conversation_state.py  llm.py  log_capture.py  sanitizer.py  state.py  tracing.py  utils.py
ai_financial_analyst/core/llm/: __init__.py  circuit_breaker.py  gemini.py  protocols.py  registry.py
ai_financial_analyst/data/: __init__.py  base.py  benchmarks.json
ai_financial_analyst/data/benchmark/: __init__.py  lookup.py  normalizer.py  static.py
ai_financial_analyst/data/market/: __init__.py  risk_free.py  sp500.py
ai_financial_analyst/data/search/: __init__.py  credibility.py  tavily.py
ai_financial_analyst/data/yahoo/: __init__.py  balance_sheet.py  cash_flow.py  earnings.py  fundamentals.py  metrics.py  price.py  trends.py
ai_financial_analyst/memory/: __init__.py  in_memory.py  long_term.py  memory_manager.py  protocol.py  short_term.py
ai_financial_analyst/pageindex/: __init__.py  embedder.py  ocr.py  pipeline.py  retriever.py
ai_financial_analyst/parsers/: __init__.py  _page_extractor.py  _summarise.py  csv_parser.py  excel_parser.py  json_parser.py  pdf_parser.py  text_parser.py  word_parser.py
ai_financial_analyst/tools/: __init__.py  base.py  benchmark_lookup.py  calculator.py  chart_generator.py  docx_exporter.py  file_parser.py  financial_formulas.py  market_data.py  pdf_exporter.py  report_writer.py  web_search.py  xlsx_exporter.py  yahoo_finance.py
backend/: main.py
backend/core/: auth.py  database.py  deps.py  event_store.py  models.py  session_manager.py
backend/routers/: admin.py  auth.py  chat.py  conversations.py  feedback.py  files.py  memory.py
docs/: AI_Financial_Analyst_Agent_PRD.docx  MANUAL_TESTING.md  MEMORY_ARCHITECTURE.md  ROADMAP.md  SYSTEM_AUDIT.md  global-instructions.md
frontend/: .env.local.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: PlotlyChart.tsx
frontend/src/components/chat/: ChatBubble.tsx  ChatInterface.tsx  CitationRenderer.tsx  ExportMenu.tsx  FileUploadZone.tsx  MessageInput.tsx  ProvenancePanel.tsx
frontend/src/components/sidebar/: ConversationList.tsx  MemoryPanel.tsx
frontend/src/hooks/: useAuth.ts  useStreamingChat.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
tests/: conftest.py
tests/adversarial/: test_prompt_injection.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_conversational_agent.py  test_editor_agent.py  test_researcher_agent.py
tests/unit/: test_benchmark_lookup.py  test_budget_tracker.py  test_calculator.py  test_charts.py  test_comparison_agent.py  test_core_utils.py  test_data_benchmark.py  test_data_market.py  test_data_search.py  test_editor_grounding.py  test_financial_formulas.py  test_intent_classifier.py  test_llm_fallback.py  test_llm_registry.py  test_long_term_memory.py  test_memory_manager.py  test_memory_protocol.py  test_orchestrator_routing.py  test_pageindex_chunking.py  test_quant_analyst_dcf.py  test_refinement_handler.py  test_report_writer.py  test_sanitizer.py  test_settings.py  test_short_term_memory.py  test_yahoo_finance.py
ui/: app.py  chat_app.py
