[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-financial-analyst"
version = "1.0.0"
description = "Conversational AI Financial Analyst Agent — ReAct + Multi-Agent + FastAPI + React"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.2.17",
    "langgraph==1.1.10",
    "langgraph-checkpoint-sqlite==3.0.3",
    "aiosqlite>=0.20.0",
    "langchain-google-genai==4.2.2",
    "langchain-tavily==0.2.18",
    "yfinance==1.3.0",
    "curl_cffi>=0.7.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "tenacity==9.1.2",
    "diskcache==5.6.3",
    "langsmith==0.8.0",
    "numexpr==2.10.2",
    "python-dotenv==1.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
server = [
    # FastAPI stack
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "google-auth>=2.29",
    "python-jose[cryptography]>=3.3",
    # Multimodal (Phase 5)
    "plotly>=5.24",
    "pandas>=2.2",
    "pdfplumber>=0.11",
    "weasyprint>=62.0",
    "markdown-it-py>=3.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    # PageIndex — page-level document retrieval
    "pgvector>=0.3.0",        # pgvector SQLAlchemy type (Vector(768)); graceful fallback on SQLite
    "PyMuPDF>=1.24.0",        # rich PDF: layout, fonts, image rendering for OCR
    "pytesseract>=0.3.13",    # OCR for scanned PDFs (requires Tesseract system package)
    "Pillow>=10.0.0",         # image handling for OCR pipeline
    "beautifulsoup4>=4.12",   # HTML section extraction
    "mistune>=3.0.0",         # Markdown AST parser
]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-recording==0.13.2",
    "pytest-cov==6.1.0",
    "vcrpy==6.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_financial_analyst*", "backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ai_financial_analyst", "backend"]
omit = ["tests/*"]
